--- a/Languages/ChineseSimplified (简体中文)/DefInjected/ThingDef/FA47.xml
+++ b/Languages/ChineseSimplified (简体中文)/DefInjected/ThingDef/FA47.xml
@@ -9,7 +9,7 @@
   <!-- EN: F/A-47 "Arsenal Angel" helmet -->
   <DMS_Apparel_FA47_Helmet.label>F/A-47 "武库天使" 头部</DMS_Apparel_FA47_Helmet.label>
   <!-- EN: A complex synthetic caliber sensor module used by colonial fleets on dragoons used in space operations, It can effectively track high-speed moving enemies and assist pilot in aiming. -->
-  <DMS_Apparel_FA47_Helmet.description>由殖民舰队装备并使用的合成口径传感器模块。它可以有效追踪高速移动的敌人并协助飞行员瞄准。</DMS_Apparel_FA47_Helmet.description>
+  <DMS_Apparel_FA47_Helmet.description>由殖民舰队装备并使用的合成口径感测器模块。它可以有效追踪高速移动的敌人并协助飞行员瞄准。</DMS_Apparel_FA47_Helmet.description>
   
   <!-- EN: F/A-47 "Arsenal Angel" core module -->
   <DMS_Module_FA47_Core.label>F/A-47 "武库天使" 核心模块</DMS_Module_FA47_Core.label>
@@ -19,6 +19,6 @@
   <!-- EN: F/A-47 "Arsenal Angel" helmet -->
   <DMS_Module_FA47_Helmet.label>F/A-47 "武库天使" 头部模块</DMS_Module_FA47_Helmet.label>
   <!-- EN: A complex synthetic caliber sensor module used by colonial fleets on dragoons used in space operations, It can effectively track high-speed moving enemies and assist pilot in aiming. -->
-  <DMS_Module_FA47_Helmet.description>由殖民舰队装备并使用的合成口径传感器模块。它可以有效追踪高速移动的敌人并协助飞行员瞄准。</DMS_Module_FA47_Helmet.description>
+  <DMS_Module_FA47_Helmet.description>由殖民舰队装备并使用的合成口径感测器模块。它可以有效追踪高速移动的敌人并协助飞行员瞄准。</DMS_Module_FA47_Helmet.description>
   
 </LanguageData>
