--- a/Languages/ChineseTraditional (繁體中文)/DefInjected/ThingDef/Modules_ShoulderLeft.xml
+++ b/Languages/ChineseTraditional (繁體中文)/DefInjected/ThingDef/Modules_ShoulderLeft.xml
@@ -23,16 +23,16 @@
   <!-- EN: launch missile -->
   <DMS_Apparel_MissilePodPlus.verbs.launch_missile.label>發射導彈</DMS_Apparel_MissilePodPlus.verbs.launch_missile.label>
   
-  <!-- EN: Somke launcher -->
-  <DMS_Apparel_SomkeLauncher.label>煙霧發射器</DMS_Apparel_SomkeLauncher.label>
+  <!-- EN: Smoke launcher -->
+  <DMS_Apparel_SmokeLauncher.label>煙霧發射器</DMS_Apparel_SmokeLauncher.label>
   <!-- EN: A simple remote-controlled launcher capable of loading smoke shells and providing accurate cover. -->
-  <DMS_Apparel_SomkeLauncher.description>一種簡單的遙控發射器，能夠裝載煙霧彈並提供精確的掩護。</DMS_Apparel_SomkeLauncher.description>
+  <DMS_Apparel_SmokeLauncher.description>一種簡單的遙控發射器，能夠裝載煙霧彈並提供精確的掩護。</DMS_Apparel_SmokeLauncher.description>
   <!-- EN: smoke shell -->
-  <DMS_Apparel_SomkeLauncher.comps.CompApparelReloadable.chargeNoun>煙霧彈</DMS_Apparel_SomkeLauncher.comps.CompApparelReloadable.chargeNoun>
+  <DMS_Apparel_SmokeLauncher.comps.CompApparelReloadable.chargeNoun>煙霧彈</DMS_Apparel_SmokeLauncher.comps.CompApparelReloadable.chargeNoun>
   <!-- EN: on cooldown -->
-  <DMS_Apparel_SomkeLauncher.comps.CompApparelReloadable.cooldownGerund>冷卻中</DMS_Apparel_SomkeLauncher.comps.CompApparelReloadable.cooldownGerund>
+  <DMS_Apparel_SmokeLauncher.comps.CompApparelReloadable.cooldownGerund>冷卻中</DMS_Apparel_SmokeLauncher.comps.CompApparelReloadable.cooldownGerund>
   <!-- EN: launch smoke shell -->
-  <DMS_Apparel_SomkeLauncher.verbs.launch_smoke_shell.label>發射煙霧彈</DMS_Apparel_SomkeLauncher.verbs.launch_smoke_shell.label>
+  <DMS_Apparel_SmokeLauncher.verbs.launch_smoke_shell.label>發射煙霧彈</DMS_Apparel_SmokeLauncher.verbs.launch_smoke_shell.label>
   
   <!-- EN: Swarm rocket Pod -->
   <DMS_Apparel_SwarmMissilePod.label>集群火箭艙</DMS_Apparel_SwarmMissilePod.label>
@@ -55,10 +55,10 @@
   <!-- EN: A missile pod module that attach on variety of weapon platforms, it is heavier but capable of loading double amount of missiles. -->
   <DMS_Module_MissilePodPlus.description>一種安裝在各種武器平台上的導彈吊艙模組，重量更重，但能夠裝載雙倍數量的導彈。</DMS_Module_MissilePodPlus.description>
   
-  <!-- EN: Somke launcher -->
-  <DMS_Module_SomkeLauncher.label>煙霧發射器模組</DMS_Module_SomkeLauncher.label>
+  <!-- EN: Smoke launcher -->
+  <DMS_Module_SmokeLauncher.label>煙霧發射器模組</DMS_Module_SmokeLauncher.label>
   <!-- EN: A simple remote-controlled launcher capable of loading smoke shells and providing accurate cover. -->
-  <DMS_Module_SomkeLauncher.description>一種簡單的遙控發射器，能夠裝載煙霧彈並提供精確的掩護。</DMS_Module_SomkeLauncher.description>
+  <DMS_Module_SmokeLauncher.description>一種簡單的遙控發射器，能夠裝載煙霧彈並提供精確的掩護。</DMS_Module_SmokeLauncher.description>
   
   <!-- EN: Swarm rocket Pod -->
   <DMS_Module_SwarmMissilePod.label>集群火箭艙模組</DMS_Module_SwarmMissilePod.label>
