更新0204 修復了多個問題。
修復了頭盔不防毒氣的問題。
修復了儲存區圖標顯示錯誤的問題。
為FA47應用了新的飛行距離屬性。
為推進器模塊繪製了新貼圖。

--- a/Languages/English/DefInjected/PawnKindDef/Pawnkinds.xml
+++ b/Languages/English/DefInjected/PawnKindDef/Pawnkinds.xml
@@ -7,6 +7,9 @@
   <!-- EN: pirate dragoon -->
   <DMS_Dragoon_Pirate.label>pirate dragoon</DMS_Dragoon_Pirate.label>
   
+  <!-- EN: Veteran -->
+  <DMS_LastPilot.label>Veteran</DMS_LastPilot.label>
+  
   <!-- EN: Zyklop pagoda -->
   <DMS_Squad_ArmyDragoon.label>Zyklop pagoda</DMS_Squad_ArmyDragoon.label>
   
